Bug/feature fixes
Added so container gap is maintained even on smaller screens to prevent menu overflows etc

Removed sticky actionbar since its outside of the content container

--- a/less/custom.less
+++ b/less/custom.less
@@ -1302,8 +1302,8 @@ section {
 }
 
 #main > .list-container > .list {
-  margin-left: -@container-padding;
-  margin-right: -@container-padding;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 #main > .list-container > .list-tree > ul,
@@ -3206,8 +3206,8 @@ table.table-admin-panel {
 
   .list-categories-column + .list-main-column {
     .list-container > .list {
-      margin-left: -@container-padding;
-      margin-right: -@container-padding;
+      margin-left: 0px;
+      margin-right: 0px;
     }
   }
 
