--- a/less/layout-side.less
+++ b/less/layout-side.less
@@ -588,6 +588,7 @@ body[data-navbar="side"] {
         left: @navbar-width;
         top: @tob-bar-height;
         padding-left: @container-padding;
+		display:none;
     }
 
     &.minimized .list-buttons-container .sticked-bar {
