--- a/less/layout-top.less
+++ b/less/layout-top.less
@@ -344,6 +344,7 @@ body:not([data-navbar="side"]) {
         left: 0;
         top: @navbar-height;
         padding-left: @container-padding;
+		display: none;
     }
 
     @media screen and (max-width: (@screen-sm-min - 1px)) {
